# chos

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  README.md  configure.sh  flake.nix  meson.build  riscv64-unknown-limine.txt
.cargo/: config.toml
arch/: Cargo.toml  interface.rs  meson.build  riscv64.json
arch/riscv64/: lib.rs
arch/src/: lib.rs  riscv64.rs
arch/test/: lib.rs
bootloader/: Cargo.toml  limine.ld  limine.mk  meson.build
bootloader/limine/: main.rs
kernel/: lib.rs
src/: lang_item.rs  lib.rs  page.rs  rng.rs
src/arch/: mod.rs  page.rs  test.rs
src/arch/riscv64/: mod.rs  target.json
src/bootloader/limine/: bl.mk  linker.ld  main.rs
subprojects/: .gitignore  std.wrap
subprojects/packagefiles/std/: 1.patch
